Created New Classes for LWC

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -16,6 +16,9 @@
             ],
             "c/treePlantationExplorer": [
                 "treePlantationExplorer/treePlantationExplorer.js"
+            ],
+            "c/newTreePlantation": [
+                "newTreePlantation/newTreePlantation.js"
             ]
         },
         "experimentalDecorators": true
