--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -3,9 +3,14 @@
   "edition": "Developer",
   "hasSampleData": true,
   "features": [],
+  //"settings": {
+  //  "orgPreferenceSettings": {
+  //    "s1DesktopEnabled": true
+  //  }
+  //} got a message saying this is deprecated
   "settings": {
-    "orgPreferenceSettings": {
-      "s1DesktopEnabled": true
+    "lightningExperienceSettings": {
+        "enableS1DesktopEnabled": true
     }
   }
 }
